[package]
name = "arch-network-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Mock implementation of arch_program for development
arch_program = { path = "./arch_program" }
